# mtsum

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make-release-x64-linux.sh  make-release-x64-windows.ps1  vcpkg-configuration.json  vcpkg.json
src/: buffer.hpp  merkel_tree.hpp  mtsum-mpi.cpp  mtsum.cpp  mtsum.hpp
