cmake_minimum_required(VERSION 3.20)
set(VCPKG_TARGET_TRIPLET x64-windows-static)
project(mtsum CXX)

if (MSVC)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_FLAGS_DEBUG "-Zi -DDEBUG -DLLFIO_EXPERIMENTAL_STATUS_CODE=1")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DLLFIO_EXPERIMENTAL_STATUS_CODE=1")
else ()
    set(CMAKE_CXX_STANDARD 20)
    if (WIN32)
        set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    else ()
        set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    endif ()
    set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
endif ()

find_package(argparse CONFIG REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(llfio CONFIG REQUIRED)
find_package(Taskflow CONFIG REQUIRED)

add_executable(mtsum src/mtsum.cpp)
target_link_libraries(mtsum PRIVATE argparse::argparse OpenSSL::Crypto Taskflow::Taskflow)
set_property(TARGET mtsum PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
target_link_libraries(mtsum PRIVATE llfio::hl)