cmake_minimum_required(VERSION 3.20)
option(MTSUM_STATIC "Enable static linking" OFF)
option(MTSUM_MPI "Enable MPI support" OFF)
if (MTSUM_STATIC)
    set(VCPKG_LIBRARY_LINKAGE static)
    if (WIN32)
        set(VCPKG_TARGET_TRIPLET x64-windows-static)
    endif ()
endif ()
project(mtsum CXX)

if (MSVC)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_FLAGS_DEBUG "-Zi -DDEBUG -DLLFIO_EXPERIMENTAL_STATUS_CODE=1")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DLLFIO_EXPERIMENTAL_STATUS_CODE=1")
    message("MSVC detected")
else ()
    set(CMAKE_CXX_STANDARD 20)
    if (WIN32)
        set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    else ()
        set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    endif ()
    if (MTSUM_STATIC)
        set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
    endif ()
endif ()

find_package(argparse CONFIG REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(llfio CONFIG REQUIRED)
find_package(Threads REQUIRED)
find_package(Taskflow CONFIG REQUIRED)

add_executable(mtsum src/mtsum.cpp)
set_property(TARGET mtsum PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
target_link_libraries(mtsum PRIVATE argparse::argparse Taskflow::Taskflow llfio::hl OpenSSL::Crypto)

if (MTSUM_MPI)
    find_package(MPI REQUIRED)
    include_directories(${MPI_INCLUDE_PATH})

    add_executable(mtsum-mpi src/mtsum-mpi.cpp)
    set_property(TARGET mtsum-mpi PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
    target_link_libraries(mtsum-mpi PRIVATE argparse::argparse Taskflow::Taskflow llfio::hl OpenSSL::Crypto ${MPI_CXX_LIBRARIES})
endif ()