cmake_minimum_required(VERSION 3.20)
option(MTSUM_STATIC "Enable static linking" OFF)
option(MTSUM_VCPKG "Enable vcpkg integration" OFF)

message("MTSUM_STATIC: ${MTSUM_STATIC}")
message("MTSUM_VCPKG: ${MTSUM_VCPKG}")

if (MTSUM_VCPKG)
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
endif ()

if (MTSUM_STATIC)
    set(VCPKG_LIBRARY_LINKAGE static)
    if (WIN32)
        set(VCPKG_TARGET_TRIPLET x64-windows-static)
    endif ()
endif ()

project(mtsum CXX)

if (MSVC)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_FLAGS_DEBUG "-Zi -DDEBUG -DLLFIO_EXPERIMENTAL_STATUS_CODE=1")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DLLFIO_EXPERIMENTAL_STATUS_CODE=1")
else ()
    set(CMAKE_CXX_STANDARD 20)
    if (WIN32)
        set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    else ()
        set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    endif ()
    if (MTSUM_STATIC)
        set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
    endif ()
endif ()

find_package(argparse CONFIG REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(llfio CONFIG REQUIRED)
find_package(Threads REQUIRED)
find_package(Taskflow CONFIG REQUIRED)

add_executable(mtsum src/mtsum.cpp)
if (MSVC)
    if (MTSUM_STATIC)
        set_property(TARGET mtsum PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
    else ()
        set_property(TARGET mtsum PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL$<$<CONFIG:Debug>:Debug>")
    endif ()
endif()
target_link_libraries(mtsum PRIVATE argparse::argparse Taskflow::Taskflow llfio::hl OpenSSL::Crypto)
